src/App.css
body {
  margin: 0;
}

/* App div */

.App {
  background-image: linear-gradient(to right top, #386ebe, #4d80ce, #6793d7, #80a7df, #9abbe7);
  background-repeat: no-repeat;
  background-size: 100%;
  display: flex;
  min-height: 100vh;
  width: 100vw;
  grid-template-columns: 1fr;
  flex-direction: column;
  align-items: center;
}

/* Typography */ 

h1, h2, h3, p {
  margin: 0;
}

/* unsorted */

#header-div, 
#weather-summary-div,
#daily-weather-div, 
#footer-div {
  box-sizing: border-box;
  padding: 1em;
}

#header-div {
  display: flex;
  align-items: center;
  background: lightblue;
  width: 100%;
  height: 30px;
}

#menu-div {
  background: rgba(240, 240, 240, 0.2);
  backdrop-filter: blur(50px);
  position: absolute;
  overflow: hidden;
  left: 0%;
  height: 5%;
  transition: all 0.5s ease;
  display: flex;
  justify-content: center;
  padding: 1em;
  color: #FFFFFF;
  box-sizing: border-box;
  transition: all 0.5s ease;
  border-bottom-right-radius: 8px;
  
}

  #menu-icon {
    transition: transform 0.5s ease;
    position: absolute;
    right: 7.5px;
    bottom: 10px;
    width: 1.5em;
    z-index: 1;
  }


  #menu-list-div {
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 1em;
    white-space: pre;
  }

    #menu-list-div > p {
      display: flex;
      justify-content: space-between;
      align-items: baseline;
      user-select: none;
    }

      .unit-selector-span {
        min-width: max-content;
      }

      #menu-list-div > p:not(:first-child) {
        margin-top: 10px;
      }

      .left-scale-arrow, .right-scale-arrow {
        width: 0.5em;
        margin: 0 10px;
        cursor: pointer;
      }

  #menu-toggle-button {
    border: none;
    position: absolute;
    bottom: 0;
    right: 0;
    height: 32px;
    width: 32px;
    cursor: pointer;
    transition: all 0.4s ease-in-out;
  }

#weather-summary-div {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  height: auto;
  box-sizing: border-box;
  color: #FFFFFF;
}

  #current-weather-div {
    width: auto;
    margin: 1em 1em 0 1em;
  }

    #weather-summary-row-one {
      display: flex;
      align-items: end;
      margin-bottom: -0.5em;
    }

    #weather-summary-row-two {
      display: flex;
      align-items: center;
    }

      #weather-icon {
        width: 3.5em;
        margin-left: 0.75em;
        margin-bottom: -12.5px;
      }
      
    #weather-summary-row-three {
      display: flex;
    }
    
      /* #weather-description-text {
      } */

    #weather-summary-row-four {
      display: flex;
      flex-direction: column;
      margin-top: 0.75em;
    }
  
      #min-max-temp-text {
        color: lightgrey;
      }


  #additional-weather-info-div {
    display: none;
    grid-template: 1fr 1fr 1fr;
    grid-template-areas:
      'A A A' 
      'B C D'
      'E F G';
    background: rgba(0, 0, 0, 0.1);
    border-radius: 16px;
    border-collapse: collapse;
    padding: 1em;
  }

    .additional-weather-info-element {
      padding: 0 0.5em 0 0.5em;
      text-align: center;
      font-size: 0.9em;
      font-weight: normal;
    }

    /* #wind-speed-heading, 
    #gust-speed-heading, 
    #wind-direction-heading,
    #cloud-coverage-heading,
    #relative-humidity-heading {
    } */
    
    
    #cloud-coverage,
    #relative-humidity,
    #wind-speed,
    #gust-speed,
    #wind-direction {
      display: flex;
      align-items: center;
      justify-content: center;
    }

      #cloud-coverage-icon,
      #relative-humidity-icon,
      #wind-speed-icon,
      #gust-speed-icon,
      #wind-direction-icon {
        padding-right: 5px;
      }

    #additional-weather-div-row-one {
      grid-area: A;
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-template-areas: 
        'A B'
        'C D';
      flex-direction: row;
      text-align: center;
      margin: 0 auto 1em auto;
    }
    
      #cloud-coverage-heading {
        grid-area: A;
      }
      
      #cloud-coverage {
        grid-area: C;
      }

        #cloud-coverage-icon {
          width: 2em;
        }
      
      #relative-humidity-heading {
        grid-area: B;
      }
      
      #relative-humidity {
        grid-area: D;
      }
      
        #relative-humidity-icon {
          width: 1.5em;
        }

      #wind-speed-heading {
        grid-area: B;
        
      }

      #wind-speed {
        grid-area: E;
      }

        #wind-speed-icon {
          width: 1.5em;
        }

      #gust-speed-heading {
        grid-area: C;
      }
      
      #gust-speed {
        grid-area: F;
      }

        #gust-speed-icon {
          width: 1.5em;
        }
   
      #wind-direction-heading {
        grid-area: D;
      }
      
      #wind-direction {
        grid-area: G;
      }

        #wind-direction-icon {
          width: 1.25em;
        }


#forecast-div {
  display: flex;
  flex-direction: column;
  align-items: start;
  width: 100%;
  height: auto;
  box-sizing: border-box;
  padding: 0 2em;
}
  
  #daily-header, #hourly-header {
    color: #FFFFFF;
    font-size: 1rem;
  }

  #daily-forecast-div, #hourly-forecast-div {
    display: flex;
    margin-top: 0.75em;
    width: 100%;
    height: 100%;
    overflow-x: auto;
    gap: 1em;
    color: #FFFFFF;
    
    padding-bottom: 10px;

    scrollbar-width: auto;
    scrollbar-color: rgb(218, 218, 218) rgba(0, 0, 0, 0.1);
    margin-bottom: 1em;
  }

  
  .weather-entry-div {
    display: flex;
    flex-direction: column;
    flex: 0 0 auto;
    align-items: center;
    width: 10%;
    height: 50%;
    border-radius: 16px;
    background: rgba(0, 0, 0, 0.1);
    cursor: pointer;
    padding: 0.6em 0.75em;
    user-select: none;
  }

    .weather-entry-info-div {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      height: 100%;
    }
    
      .weather-entry-icon {
        width: 2em;
        margin: auto 0;
      }
      
      .humidity-entry-div {
        display: flex;
        align-items: center;
        justify-content: space-evenly;
        color: rgb(240, 240, 240);
      }
        
        .humidity-icon {
          width: 15px;
          padding-right: 2.5px;
        }


  #hourly-forecast-info-div, #daily-forecast-info-div {
    display: grid;
    grid-template-columns: 1fr;
  }


  .forecast-info-div {
    background: rgba(0, 0, 0, 0.1);
    border-radius: 16px;
    box-sizing: border-box;
    width: 100%;
    margin-bottom: 1em;
    color: #FFFFFF;
    padding: 1em;
  }

    .forecast-info-inner-div {
      width: 100%;
    }

      .forecast-info-inner-div:not(:nth-child(-n+1)) {
        margin-top: 15px;
      }
      
      .forecast-info-inner-div > h1 {
        font-size: 1em;
        padding: 0 5px 7.5px 5px;
      }

      .forecast-info-inner-div > p {
        font-size: 0.95em;
        padding: 0.25em 0.5em;
        display: flex;
        justify-content: space-between;
      }

        .forecast-info-inner-div > p > span {
          margin-right: 1em;
        }

      .forecast-info-inner-div > p:nth-child(even) {
        background: rgba(0, 0, 0, 0.15);
      }


#footer-div {
  /* background: slategrey; */
  height: 5%;
}


@media (max-width: 320px) {
  body {
    font-size: clamp(0.75rem, 3vw, 1rem);
  }
}

@media (min-width: 321px) {
  body {
    font-size: clamp(1rem, 5vw, 1rem);
  }
  
  #hourly-forecast-info-div, #daily-forecast-info-div {
    grid-template-columns: 1fr;
  }
}

@media (min-width: 720px) {

  #weather-summary-div {
    justify-content: space-evenly;
  }

    #current-weather-div {
      display: flex;
      align-items: center;
      flex-direction: column;
      margin: 0;
    }
      #weather-summary-row-four {
        align-items: center;
      }

    #additional-weather-info-div {
      display: grid;
    }

    
  #daily-forecast-div, #hourly-forecast-div {
    margin-bottom: 2em;
  }

    #hourly-forecast-info-div {
      grid-template-columns: 1fr 1fr;
    }

      .forecast-info-inner-div:not(:nth-child(-n+1)) {
        margin-top: 0px;
      }

      .forecast-info-inner-div:not(:nth-child(-n+2)) {
        margin-top: 15px;
      }

    #daily-forecast-info-div > .forecast-info-inner-div:not(:nth-child(-n+1)) {
      margin-top: 10px;
    }
}

@media (min-width: 1024px) {
  #forecast-div {
    margin-top: 5em;
  }

  #daily-forecast-info-div {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

